tests/paczka1/fuzzy1/63234576.err
Error in line 1: g62TX A104 63,8
Error in line 9: q5P5K5BcdaI A930 59,8
Error in line 11: 7Ka177aw S489 54,3
Error in line 26: RqoTYLa A104 95,8
